--- a/package.json
+++ b/package.json
@@ -26,7 +26,11 @@
     "nodemon": "^2.0.13"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
-    "mongoose": "^6.0.8"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.0.8",
+    "validator": "^13.6.0"
   }
 }
